k8s/mfe-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-console
spec:
  selector:
    app: mfe-console
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
