k8s/mfe-host-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-host
spec:
  selector:
    app: mfe-host
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
